--- a/app.json
+++ b/app.json
@@ -4,11 +4,10 @@
     "slug": "cephunter",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#8a038e"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
